<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">GeoDatings</string>
    <string name="action_settings">Settings</string>
    <string name="app_description">
<![CDATA[
<html>
 <head></head>
 <body style="text-align:justify;color:gray;background-color:black;">
  GeoDatings is a proximity based social application for devices based on Android.
 </body>
</html>
]]>
</string>
	<string name="copyright">Copyright &#169; 2014 by Surdeanu Mihai. All rights reserved.</string>
    		
	<string name="notification_header">GeoDatings</string>
		
	<string name="menu_arround">Around You</string>
    <string name="menu_reroute">Reroute</string>
 	<string name="menu_search">Search</string>
 	<string name="menu_addevent">Add Event</string>
 	
    <string name="msgbox_title_cancel">Canceled</string>
    <string name="msgbox_message_not_granted">permission not granted</string>
    <string name="msgbox_button_ok">OK</string>
    
    <string name="gps_alert">Would you like to enable GPS?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
   	<string name="distance_alert">your position is outside the area. this app will use default location.</string>
    <string name="no_user_position">Can\'t get user position</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="layers">Layers</string>
    <string name="retry">Retry</string>
    <string name="no_internet_connection">No connection</string>
    <string name="getting_marker">Getting marker&#8230;</string>
    <string name="share_via">Share Via</string>

    <string name="btn_share">Share</string>
    <string name="btn_tell_friend">Tell a Friend</string>
    <string name="btn_rate_app">Rate App</string>
    
    <string name="no_connection">No connection: Cannot request location.</string>
    
    <string name="alert_notification">You have new event!</string>
    
    <string name="claim">Claim This Event</string>
    <string name="lbl_no_result">No Result</string>
    <string name="lbl_date_end">End Date: </string>
    <string name="error_server">Server is under construction or \n connection is unstable</string>

    <string name="loading_data">Loading data&#8230;</string>
    <string name="sending_data">Sending data&#8230;</string>
    <string name="hint_search">Type Name</string>
    
    <string name="page_around_you">Around You</string>
    <string name="page_category">Category</string>
    <string name="page_setting">Settings</string>
    <string name="page_search">Search</string>
    <string name="page_about">About</string>
    
    <string name="chk_facebook">Facebook</string>
    <string name="preferences_type">preferenceType</string>
    <string name="preferences_zoom">preferenceZoom</string>

	<string name="internet_alert">No connection. Please enable your internet connection.</string>
    <string name="address_output_string">%1$s %2$s %3$s</string>
    
    <string name="setting_cat_server">Server</string>
    <string name="setting_prefkey_server">preferenceServer</string>
    <string name="setting_server_title">Server Address</string>
    <string name="setting_server_summary">Configure server URL used to obtain information.</string>
    <string name="setting_prefkey_apis">preferenceApis</string>
    <string name="setting_apis_title">Server API</string>
    <string name="setting_apis_summary">Choose API version to be used.</string>
    <string name="setting_apis_human">v%s</string>
    
    <string name="social">Social</string>
    <string name="facebook">Facebook</string>
    <string name="help">Help</string>
    <string name="map">Map</string>
    <string name="view_type">View Type</string>
    <string name="default_zoom">Default Zoom</string>
    <string name="setting_prefkey_facebook">preferenceFacebook</string>
    <string name="preferences_twitter">preferenceTwitter</string>
    <string name="preferences_overlay">preferenceOverlay</string>
    
    <string name="addevent_form">Add event</string>
    <string name="addevent_instructions">All fields prefixed with * are required.</string>
    <string name="addevent_section_main">Event Information</string>
    <string name="addevent_section_date">Date Information</string>
    <string name="addevent_title">Subject</string>
    <string name="addevent_title_hint">Please enter a subject</string>
    <string name="addevent_address">Address</string>
    <string name="addevent_address_hint">Choose a valid address</string>
    <string name="addevent_start">Start date</string>
    <string name="addevent_start_hint">Start date</string>
    <string name="addevent_end">End date</string>
    <string name="addevent_end_hint">End date</string>
    <string name="addevent_date_error">Start date must be before the end date.</string>
    <string name="addevent_category">Category</string>
    <string name="addevent_category_hint">A proper category for this event</string>
    <string name="addevent_latitude">Latitude</string>
    <string name="addevent_latitude_hint">Latitude</string>
    <string name="addevent_longitude">Longitude</string>
    <string name="addevent_longitude_hint">Longitude</string>
    <string name="addevent_section_resource">Resource Information</string>
    <string name="addevent_email">Email address</string>
    <string name="addevent_email_hint">Feel free to provide an email address</string>
    <string name="addevent_phone">Phone number</string>
    <string name="addevent_phone_hint">A phone number is sometimes useful</string>
    <string name="addevent_phone_error">Phone number must be in the form XXX-XXXXXXX.</string>
    <string name="addevent_image">Image</string>
    <string name="addevent_image_hint">Choose a relevant image for event</string>
    <string name="addevent_added_successfully">Event added successfully.</string>
    <string name="addevent_file_notfound">The specified image don\'t exists.</string>
    
    <string name="get_position">Getting user position &#8230;</string>

    <string name="latitude_longitude">%1$.8f, %2$.8f</string>
    
    <string name="map_temp_marker_title">Tap to create.</string>
    <string name="map_temp_marker_delmsg">Delete temporary marker?</string>
    <string name="map_lat_lng_info" formatted="false">[Latitude: %.5f, Longitude: %.5f]</string>
    
	<string name="zoom_summary">%1$d</string>
    <string name="zoom_dialog_title">Default Zoom</string>
    <string name="overlay_title">Activated Overlay</string>
    
    <string name="direction">Direction</string>
    <string name="direction_alert">Improve the accuracy of your location by turning on GPS.</string>
    <string name="no_route">Unable to get route</string>
    <string name="loading_route">Loading route. Please wait &#8230;</string>
    <string name="settings">Settings</string>
    <string name="notice">Notice</string>
    <string name="cannot_get_address">Cannot get location address</string>    
    
    <string name="confirm">Confirm</string>
    <string name="login_facebook">Login to Facebook</string>
	<string name="delete_facebook_connection">Delete current Facebook connection?</string>
	<string name="connect_facebook">Connected to Facebook as</string>
	
    <string name="connected">Client connected</string>
    <string name="connected_social">Connected as</string>
    <string name="connection_error_code_unknown">Unknown connection error code:  %1$d</string>
    <string name="connection_failed">Connection failed</string>
    <string name="disconnected">Client disconnected</string>
    <string name="get_address">Get Address</string>
    <string name="get_location">Get Location</string>
    <string name="illegal_argument_exception">
        Illegal arguments: Latitude %1$.8f Longitude %2$.8f
    </string>
    <string name="invalid_action">Invalid intent action %1$s</string>
    <string name="invalid_integer_id">Invalid integer request ID: %1$s</string>
    <string name="IO_Exception_getFromLocation">IO Exception in Geocoder.getFromLocation()</string>
    <string name="location_requested">Periodic updates requested</string>
    <string name="location_updated">Location updated</string>
    <string name="location_update_error">Location update failed</string>
    <string name="location_update_error_detail">
        Location update error. code %1$d message %2$s
    </string>
    <string name="location_update_missing_update">
        Location update error. No incoming location.
    </string>
    <string name="location_updates_stopped">Periodic updates stopped</string>
    <string name="log_new_location">New location: %1$s</string>
    <string name="no_address_found">No address found for location</string>
    <string name="no_geocoder_available">Cannot get address. No geocoder available.</string>
    <string name="no_location_available">Location not available</string>
    <string name="resolved">Error resolved. Please re-try operation.</string>
    <string name="no_resolution">Google Play services: unable to resolve connection error.</string>
    <string name="periodic_update_stop">Stopping periodic updates</string>
    <string name="play_services_available">Google Play services is available</string>
    <string name="request_location_updates_in_progress">
        Can\'t request location updates, previous request hasn\'t finished
    </string>
    <string name="start_updates">Start Updates</string>
    <string name="stop_updates">Stop Updates</string>
    <string name="unknown">--Unknown--</string>
    <string name="unknown_activity_request_code">
        Received an unknown activity request code %1$d in onActivityResult.
    </string>
    <string name="loading">Loading&#8230;</string>
    
    <string-array name="lbl_array_view_type">
        <item >Normal</item>
        <item >Hybrid</item>
        <item >Satelite</item>
        <item >Terrain</item>
    </string-array>
    
   	<string-array name="menu_list">
        <item >Feed</item>
        <item >Categories</item>
        <item >Settings</item>
        <item >About</item>
    </string-array>
    
   	<string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    
</resources>
