<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/Background_main" >
    	
   	<ro.mihaisurdeanu.geodatings.loadmore.PagingListView
		android:id="@+id/list"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:fadeScrollbars="true"
		android:fastScrollEnabled="true"
		android:fadingEdge="none"
		android:divider="@color/divider"
		android:dividerHeight="6dp"
		android:listSelector="@drawable/apptheme_list_selector_holo_light"
		android:layout_alignParentTop="true"/>

    <LinearLayout
        android:id="@+id/lytRetry"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
       	android:layout_centerInParent="true"
       	android:gravity="center"
       	android:visibility="gone">
        <TextView  
		    android:id="@+id/lblAlert"
		    android:text="@string/no_internet_connection"
		    android:textColor="@color/text_sub_title"
		    android:layout_width="wrap_content"    
		    android:layout_height="wrap_content"
		    style="@android:style/TextAppearance.Medium"/>
        <Button 
	        android:id="@+id/btnRetry"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/retry"
	        android:textColor="@color/text_btn"
	        android:background="@drawable/apptheme_btn_default_holo_light"
		   	style="@android:style/TextAppearance.Medium"/>
    </LinearLayout>
    
    <TextView
        android:id="@+id/lblNoResult"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:textColor="@color/text_sub_title"
		android:text="@string/lbl_no_result"
		android:layout_centerInParent="true"
		android:visibility="gone"
		style="@android:style/TextAppearance.Medium"/>
    

</RelativeLayout>

